// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGridCellClasses should not resize widgets that fit into a 12-column grid 1`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
]
`;

exports[`getGridCellClasses should not resize widgets that fit into a 12-column grid 2`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-6-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-6-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
]
`;

exports[`getGridCellClasses should not resize widgets that fit into a 12-column grid 3`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-6-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
]
`;

exports[`getGridCellClasses should resize desktop-sized widgets so they fill a row 1`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-8-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
]
`;

exports[`getGridCellClasses should resize desktop-sized widgets so they fill a row 2`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
]
`;

exports[`getGridCellClasses should resize desktop-sized widgets so they fill a row 3`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-8-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-8-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
]
`;

exports[`getGridCellClasses should resize desktop-sized widgets so they fill a row 4`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-6-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
]
`;

exports[`getGridCellClasses should resize desktop-sized widgets so they fill a row 5`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-8-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
]
`;

exports[`getGridCellClasses should resize desktop-sized widgets so they fill a row 6`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
]
`;

exports[`getGridCellClasses should resize desktop-sized widgets so they fill a row 7`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-4-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
]
`;

exports[`getGridCellClasses should return all full classNames when all widgets are full-width 1`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-12",
  ],
]
`;

exports[`getGridCellClasses should treat widgets that render no content as zero-width (ignoring them) 1`] = `
Array [
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-6-desktop",
    "mdc-layout-grid__cell--span-8-tablet",
  ],
  Array [
    "mdc-layout-grid__cell",
    "mdc-layout-grid__cell--span-3-desktop",
    "mdc-layout-grid__cell--span-4-tablet",
  ],
]
`;
